Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -380,7 +380,7 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    formatted = list(map(format_restaurant(restaurant)))"
+    "    formatted = list(map(format_restaurant()))"
    ]
   },
   {
