Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -380,7 +380,8 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    formatted = list(map(format_restaurant()))"
+    "    formatted = list(map(format_restaurant(),restaurants))\n",
+    "    "
    ]
   },
   {
