--- a/index.ipynb
+++ b/index.ipynb
@@ -380,7 +380,7 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    formatted = list(map(restaurant: format_restaurant(),restaurants))\n",
+    "    formatted = list(map(restaurant: format_restaurant(restaurant),restaurants))\n",
     "    return formatted"
    ]
   },
