Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -375,9 +375,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-14-f6eb9299713e>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-f6eb9299713e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    formatted = list(map(restaurant: format_restaurant(restaurant),restaurants))\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def map_format_restaurants(restaurants):\n",
     "    formatted = list(map(restaurant: format_restaurant(restaurant),restaurants))\n",
