--- a/index.ipynb
+++ b/index.ipynb
@@ -475,7 +475,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    filter(lambda restaurant: restaurant['is_closed']==False)"
+    "    filter(lambda restaurant: restaurant['is_closed']==False, restaurants)"
    ]
   },
   {
