Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -475,7 +475,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    list(filter(lambda restaurant: restaurant['is_closed']==False, restaurants))"
+    "    filtered = list(filter(lambda restaurant: restaurant['is_closed']==False, restaurants))\n",
+    "    return"
    ]
   },
   {
