--- a/index.ipynb
+++ b/index.ipynb
@@ -551,7 +551,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    pass"
+    "    filtered = list()"
    ]
   },
   {
