Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -551,7 +551,8 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    filtered = list(filter(lambda restaurant: restaurant['price'] == 1, restaurant))"
+    "    filtered = list(filter(lambda restaurant: restaurant['price'] == 1, restaurants)\n",
+    ")"
    ]
   },
   {
