--- a/index.ipynb
+++ b/index.ipynb
@@ -551,8 +551,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    filtered = list(filter(lambda restaurant: restaurant['price'] == 1, restaurants)\n",
-    ")"
+    "    filtered = list(filter(lambda restaurant: restaurant['price'] == 1, restaurants))"
    ]
   },
   {
