Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -546,12 +546,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    filtered = list(filter(lambda restaurant: restaurant['price'] == 1, restaurants))"
+    "    filtered = list(filter(lambda restaurant: restaurant['price'] == 1, restaurants))\n",
+    "    return filtered"
    ]
   },
   {
