--- a/index.ipynb
+++ b/index.ipynb
@@ -599,7 +599,7 @@
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
-    "    filtered = list(filter(lambda restaurant: restaurant))"
+    "    filtered = list(filter(lambda restaurant: restaurant['review_count']))"
    ]
   },
   {
