Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -599,7 +599,8 @@
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
-    "    filtered = list(filter(lambda restaurant: restaurant['review_count']>=100,))"
+    "    filtered = list(filter(lambda restaurant: restaurant['review_count']>=100,restaurants))\n",
+    "    "
    ]
   },
   {
