--- a/index.ipynb
+++ b/index.ipynb
@@ -594,13 +594,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
     "    filtered = list(filter(lambda restaurant: restaurant['review_count']>=100,restaurants))\n",
-    "    "
+    "    return filtered"
    ]
   },
   {
